- Use XLSX.js for parsing of XLSX and XLS files
- Added GrapeClient class
- Data import will now create a table for each import containing the rows
- Added API calls to manipulate bgworker (/grape/bgworker/status, /grape/bgworker/start, /grape/bgworker/stop)
- New API call session_ping

0.1.0:
- Fix authentication bug (allowing any password)

0.1.1:
- Added DB function set_user_password with JSON access
- Session specific database connections will now close after inactivity
- Added column user.local_only BOOL to indicate if a user should be linked up to Savanna 
- Added column user.pg_role TEXT for future use
- New config setting guest_dburi to allow for a seperate guest DB connection
- Grape now supports multiple public directories through config.public_directories
- Grape now supports multiple API directories through config.api_directories
- Several security improvements when serving public files
- Moved all functions in gutils to object (instead of the prototype)
- Bumped versions of pg, express, body-parser, libxmljs, async

0.1.2:
- Bugfixes:
  * Logger fails when accept header isn't present
  * DB debugger was broken

0.1.3:
- Easy installer for DB notifications using new_notify_handler(channel, handler_callback)
- Static data manager
- Improve naming of log files

0.1.4:
- Do not try to do queries on dead connections
- If a DB disconnect, try to reconnect

0.1.5:
- Added GrapeMailer class

0.1.6:
- Added option http_port

0.1.7:
- Resolved error: 'column "is_local" of relation "user" does not exist' in 'db/data/grape.user.sql'

1.0.0
- Columns for process category and process function schema
- Columns and functions for autoscheduler
- Check syntax of JS files before sending it, preventing the entire page to break on an error
- Roles in list_query_whitelist
- Description and data_type for settings
- API calls and functions for settings

1.0.1:
- Added db function jsonb call to write API functions accepting JSONB instead of JSON
