@@ -42,4 +42,9 @@ CREATE TABLE grape.setting_history(
 	CONSTRAINT setting_history_pk PRIMARY KEY (setting_history_id)
 );
 
+DROP FUNCTION IF EXISTS grape.api_result_error(_message TEXT, _code INTEGER);
+DROP FUNCTION IF EXISTS grape.api_error(_message TEXT, _code INTEGER);
+DROP FUNCTION IF EXISTS grape.api_error_invalid_input();
+DROP FUNCTION IF EXISTS grape.api_error_permission_denied();
+
 
